v5/apps/based/buddylist/buddylist.css
/* buddylist */
.app-buddylist h2 {
    padding: 0px;
    margin: 0px;
}
.window-main {
    flex-grow: 1;
    overflow-y: auto;
    background-color: #FFF;
    padding: 10px;
    border-top: 1px solid #000;
}
.loginForm {
    padding-bottom: 10px;
}
.loginForm input[type="text"],
.loginForm input[type="password"] {
    margin: 5px 0;
    padding: 8px;
    width: calc(100% - 20px);
    border: 1px solid #888;
    border-radius: 3px;
}
.loginForm .password {
    display: none;
}
.loginForm button {
    padding: 10px 15px;
    background-color: #0078D7;
    color: white;
    border: none;
    border-radius: 3px;
    cursor: pointer;
}
.loginForm button:hover {
    background-color: #0056b3;
}
.h2,
.h3 {
    color: #000;
    font-size: 18px;
}
.buddyListButton {
    background-color: #48d1cc;
    border: none;
    padding: 5px 10px;
    margin-top: 5px;
    cursor: pointer;
    border-radius: 3px;
}
.addBuddyForm {
    gap: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.sendBuddyRequest:hover {
    background-color: #2ca6a4;
}
.buddyListHolder,
.addBuddyForm {
    padding: 10px;
    background-color: #f9f9f9;
    border: 1px solid #ccc;
    width: 100%;
}
.positiveAffirmation {
    text-align: center;
    width: 100%;
    font-size: 14px;
    text-decoration: italic;
    padding-bottom: 30px;
    padding-top: 5px;
    border-bottom: 1px solid #eee;
    cursor: pointer;
}
.onlineStatus {
    width: 100%;
}
.onlineStatusSelect {
    width: 100%;
    padding: 0;
    margin: 0;
}
.buddylist {
    list-style: none;
}
.login-frog {
    font-size: 64px;
    text-align: center;
}
.login-frog i:hover {
    color: green;
    cursor: pointer;
}
.loginMessage {
    text-align: center;
}
.loginButton {
    background-color: #48d1cc;
    border: none;
    padding: 5px 10px;
    margin-top: 5px;
    cursor: pointer;
    border-radius: 3px;
    width: 100%;
}
.buddylistContainer {
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    justify-content: flex-start;
    gap: 20px;
    padding: 0 20px 0 0;
}
.inviteBuddyHolder {
    text-align: center;

}
.loginStatus {
    text-align: center
}
.tos-checkbox {
    display: flex;
    align-items: flex-end;
    justify-content: flex-start;
    gap: 5px;
}
@media (max-width: 1000px) {
    .app-buddylist>p,
    .app-buddylist>input,
    .app-buddylist>i,
    .app-buddylist>button {
        font-size: 64px !important;
    }
    .aim-input {
        font-size: 42px;
        height: 96px;
    }
    .button-bar-button {
        width: 64px !important;
        height: 64px !important;
    }
    .aim-send-btn {
        height: 128px;
        width: 128px;
    }
    .emojiPicker {
        display: none;
    }
}

